bin/testsuite/tests/compiler/src/errors/compiler3954.swg
#global testerror "Err0341"

enum OT: const [..] s32
{
    A = [1]
    B = [2]
}

//#[Swag.PrintBc]
#test
{
    var pt: OT
}
